# duststorm

./: .gitattributes  .gitignore  Makefile.am  README  README.md  configure.ac  scale
cl_programs/: hitting_particles.cl  particles.cl  particles_random.cl  particles_structs.cl
data/: graphics.cfg
data/levels/default/: enemies.cfg  highscore  level.cfg  map.xcf  particles.cfg
data/levels/desert/: level.cfg
data/levels/rainbow/: enemies.cfg  level.cfg
data/models/: bench.mtl  cube.mtl  kanon4.mtl  kanon5.mtl  pony1.mtl  shooter.mtl  tree1.mtl
data/models/canon/: cart.mtl  gun.mtl  holder.mtl
data/textures/ponnies/: fluttershy_wings.tif
m4/: ax_assimp.m4  ax_check_cl.m4  ax_glew.m4  ax_glm.m4
models/: bench.blend  bench.blend1  bench.mtl  cube.mtl  lyktstolpe.blend  lyktstolpe.blend1  lyktstolpe.blend2  lyktstolpe2.blend  lyktstolpe2.mtl  nox.mb  nox.mtl  nox2.tga  sten_maya.mtl  tft.blend  tft.mtl  tree1.blend  tv.blend  tv.mb  tv.mtl  tv_room.mb
models/nox2/: tunnel.mb  tunnel.mtl
music/: jumping.credits  jumping.txt
release_template/: .gitignore  dist.sh  run.sh  test.sh
shaders/: .dir-locals.el  blend.frag  blur.frag  color.frag  color.vert  debug.frag  debug.geom  debug.vert  default.frag  depth.frag  distort.frag  dof.frag  filmgrain.frag  fog.glsl  health.frag  health.geom  health.vert  hologram.frag  hologram.vert  light_calculations.glsl  modelviewer.frag  modelviewer.vert  normal.frag  normal.vert  particles.frag  particles.geom  particles.vert  particles_light.frag  particles_light.geom  particles_light.vert  passthru.frag  passthru.vert  screenspace.glsl  simple.frag  simple.vert  skybox.frag  skybox.vert  skybox_color.glsl  terrain.frag  terrain.vert  (+5 more)
src/: area.cpp  area.hpp  bindable.hpp  camera.cpp  camera.hpp  cl.cpp  cl.hpp  color.cpp  color.hpp  config.cpp  config.hpp  data.cpp  data.hpp  edison.cpp  edison.txt  editor.cpp  editor.xml  enemy.cpp  enemy.hpp  enemy_template.cpp  enemy_template.hpp  engine.cpp  engine.hpp  forward.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  highscore.cpp  highscore.hpp  hitting_particles.cpp  hitting_particles.hpp  input.cpp  input.hpp  light.cpp  light.hpp  lights_data.cpp  lights_data.hpp  main.cpp  material.cpp  (+62 more)
src/editor/: classify.cpp  editor.hpp  globals.hpp  render.cpp  scenelist.cpp  timecontrol.cpp
src/scene/: README.md  nox.cpp  nox_cam1.txt  nox_cam2.txt  nox_cam3.txt  nox_extra_light.txt  particles.cpp  particles_pos.txt  test.cpp  test_pos.txt  tunnel.cpp  tv.cpp  tv_cam1.txt  tv_pos.txt  water.cpp  winter.cpp
test/: editor_classify.cpp
textures/: park.xcf  sanfred_park_map.xcf  stig.xcf
textures/nox2/: text.xcf
textures/nox2/videos/: README
windows_specific/: config.h
